miniproject : inflearn clone 학습용

--- a/miniproject/inflearn_index.html
+++ b/miniproject/inflearn_index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="./css/header.css">
     <link rel="stylesheet" href="./css/bodytotal.css">
     <link rel="stylesheet" href="./css/footer.css">
-    <!-- /z_workspac -->
+    <!-- file 경로 -->
   <!--  ./ ⇒ 현재 폴더 위치에서 찾음(abc폴더 내)
 
         ../ ⇒ z_html 폴더 위치에서 찾음
@@ -26,7 +26,6 @@
     <!-- library, jquery -->
     <script src="https://kit.fontawesome.com/e706ad9be4.js" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
-    <!-- <script src="./js/jquery-3.6.0.js"></script> -->
     <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
 
     <script>
