miniproject :inflearn clone 학습용

--- a/index.html
+++ b/index.html
@@ -8,5 +8,9 @@
 </head>
 <body>
     index
+    <script>
+        console.log(location.toString(),location.href);
+        location.href = 'https://realfantastic.github.io/webpage/miniproject/inflearn_index.html';
+    </script>
 </body>
 </html>
